--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,13 @@
   <title>BPGTripletVisualization</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<app-root></app-root>
+
+<router-outlet></router-outlet>
+
 </body>
 
 </html>
